<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history"
        android:title="@string/setting_history"
        android:orderInCategory="20"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        android:orderInCategory="30"
        app:showAsAction="always" />

    <item
        android:id="@+id/show_favorites"
        android:icon="@drawable/ic_star_border"
        android:title="@string/show_favorites"
        android:orderInCategory="10"
        app:showAsAction="always" />

</menu>
